refactor: 피드백 내용 수정
- List.of 사용
- Stream 개행 수정
- Ui 값 도메인 반환
- final 추가